# profiles

./: .gitignore  .hc  .prettierrc  00ac6480.js  01c2b306.js  0cb11279.js  0f3fa55d.js  1-introduction-mdx.1cbf9417.iframe.bundle.js  1-introduction-mdx.c5bd2f63.iframe.bundle.js  1-introduction-mdx.f1ac14a9.iframe.bundle.js  115.0b73d7ca.iframe.bundle.js  115.0b73d7ca.iframe.bundle.js.map  115.24c974a7.iframe.bundle.js  115.24c974a7.iframe.bundle.js.map  12cc43a5.js  157.300c6a3a.iframe.bundle.js  157.300c6a3a.iframe.bundle.js.map  177.2d3cd594.iframe.bundle.js  177.3de519db.iframe.bundle.js  192.af413aa8.iframe.bundle.js  19b2215c.js  1c965a99.js  1e141114.js  2-1-backend-setup-mdx.02f5526b.iframe.bundle.js  2-1-backend-setup-mdx.9be3d2e7.iframe.bundle.js  2-2-integrity-mdx.7513a2a8.iframe.bundle.js  2-2-integrity-mdx.86d4f154.iframe.bundle.js  2-3-coordinator-mdx.01c4dad2.iframe.bundle.js  2-3-coordinator-mdx.0cd08d0e.iframe.bundle.js  213.1e6433b3.iframe.bundle.js  219df775.js  221cc344.js  258.ead4805d.iframe.bundle.js  26b670de.js  284c87b8.js  295834bc.js  2e7a07d2.js  2eb00038.js  3-1-frontend-setup-mdx.2deb585d.iframe.bundle.js  3-1-frontend-setup-mdx.41b3b325.iframe.bundle.js  (+286 more)
.circleci/: config.yml
.github/workflows/: build-and-cache.yaml  github-build-and-deploy-rocket-action.yml  main.yaml  main.yml  test.yaml  update-flake-inputs.yaml
.sandbox/2cjQj7f7QhBzYxHhzV07A/: conductor-config.yaml
.sandbox/EEVEFH0fbIOruaAAkx8WH/: conductor-config.yaml
.storybook/: preview-head.html
_merged_assets/_static/: custom-elements.json
assets/: webmanifest.json
bundle/: bundle.js  bundle.js.map  types.d.ts
bundle/elements/: list-profiles.d.ts
config/: rocket.config.js
crates/coordinator/: Cargo.toml  README.md  zome.nix
crates/coordinator/src/: handlers.rs  lib.rs  link_agent.rs  profile_claims.rs  profiles.rs  search.rs
crates/coordinator/tests/: create_and_get.rs  search.rs
crates/integrity/: Cargo.toml  README.md  zome.nix
crates/integrity/src/: agent_to_profile.rs  lib.rs  linking_agents.rs  path_to_profile.rs  prefix_path.rs  profile.rs  profile_claim.rs  profile_to_agent.rs
crates/types/: Cargo.toml  README.md
crates/types/coordinator_types/: Cargo.toml  README.md
crates/types/coordinator_types/src/: lib.rs
crates/types/integrity_types/: Cargo.toml  README.md
crates/types/integrity_types/src/: lib.rs
crates/types/src/: lib.rs
crates/zome/: Cargo.toml
crates/zome/src/: handlers.rs  lib.rs
demo/: index.html
docs/: .gitignore  2.2-integrity.mdx  2.3-coordinator.mdx  3.1-frontend-setup.mdx  3.2-profiles-store.mdx  index.md  introduction.md  package.json  profile-prompt.md  profiles-store.md  setup.md  template-setup.md
docs/.vitepress/: config.mts
docs/_assets/: custom-elements.json
docs/_data/: site.cjs
docs/elements/: custom-elements.json  profile-prompt.md
docs/guides/: index.md
docs/public/: custom-elements.json
elements/: base-element.d.ts  base-element.js  base-element.js.map  create-profile-form.d.ts  create-profile-form.js  create-profile-form.js.map  hod-create-profile-form.d.ts  hod-create-profile-form.js  hod-create-profile-form.js.map  hod-list-profiles.d.ts  hod-list-profiles.js  hod-list-profiles.js.map  hod-profile-prompt.d.ts  hod-profile-prompt.js  hod-profile-prompt.js.map  hod-search-agent.d.ts  hod-search-agent.js  hod-search-agent.js.map  list-profiles.d.ts  list-profiles.js  list-profiles.js.map  profile-prompt.d.ts  profile-prompt.js  profile-prompt.js.map  search-agent.d.ts  search-agent.js  search-agent.js.map
elements/utils/: base-element.d.ts  base-element.js  base-element.js.map  shared-styles.js  shared-styles.js.map
graphql/: queries.d.ts  queries.js  queries.js.map  resolvers.d.ts  resolvers.js  resolvers.js.map  schema.d.ts  schema.js  schema.js.map
guides/: index.html
guides/backend/: index.html
guides/frontend/: index.html
guides/setting-up/: index.html
nix/: sources.json
sb-addons/essentials-actions-2/: manager-bundle.mjs.map
sb-addons/essentials-backgrounds-3/: manager-bundle.mjs.map
sb-addons/essentials-controls-1/: manager-bundle.mjs  manager-bundle.mjs.map
sb-addons/essentials-viewport-4/: manager-bundle.mjs.map
sb-manager/: chunk-FZPK3FGE.mjs  index.mjs  runtime.mjs
site/pages/: index.rocket.js  pageTreeData.rocketGenerated.json  recursive.data.js
site/public/: custom-elements.json  rocket-search-index.json
src/: bundle.ts  config.ts  context.ts  index.ts  mocks.ts  profiles-service.ts  profiles-store.ts  profiles.service.ts  profiles.store.ts  types.ts
src/definitions/: list-profiles.ts  profile-detail.ts  profiles-context.ts
src/elements/: agent-avatar.ts  create-profile-form.ts  create-profile.ts  edit-profile.ts  holo-identicon.ts  (+6 more)
stories/: 1-introduction.mdx  3.1-frontend-setup.mdx  3.2-profiles-store.mdx  agent-avatar.stories.js  create-profile.stories.js  list-profiles.stories.js  my-profile.stories.js  profile-detail.stories.js  profile-list-item-skeleton.stories.js  profile-prompt.stories.js  search-agent.stories.js  search-agent.stories.md  update-profile.stories.js
tests/: Cargo.toml  package.json  vitest.config.ts
tests/src/: common.ts  index.ts  link-agent.test.ts  profile.test.ts  search.test.ts
tests/tests/: create_and_get.rs  search.rs
testsold/: package.json
ui/: .eslintrc.cjs  .eslintrc.js  .gitignore  .hc  README.md  custom-elements.json  lit-localize.json  package-lock.json  package.json  rollup-bundle.config.js  rollup.config.js  tsconfig.json  ui.nix  vite.config.ts  web-dev-server.config.mjs  web-dev.plugins.mjs
workdir/: dna.yaml  happ.yaml  profiles.webhapp  web-happ.yaml
xliff/: es-419.xlf
zome/: .hc  Cargo.toml  README.md
zome/profiles.dna.workdir/: dna.json  profiles-test.dna
zome/src/: lib.rs  profile.rs  types.rs
zome/tests/: package-lock.json  package.json
zome/tests/src/: index.ts
zome/workdir/: dna.yaml
zome/workdir/dna/: dna.yaml  profiles-test.dna
zome/workdir/happ/: happ.yaml  profiles-test.happ
zome/zomes/profiles/: Cargo.toml
zome/zomes/profiles/src/: lib.rs  profile.rs  utils.rs
(+136 files in other folders)
