[workspace]
members = ["crates/*", "tests"]
resolver = "2"

[workspace.dependencies]
hdi = {git = "https://github.com/holochain/holochain", branch="develop"}
hdk = {git = "https://github.com/holochain/holochain", branch="develop"}
serde = "1"
holochain = {git = "https://github.com/holochain/holochain", branch="develop"}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
