cargo-features = ["trim-paths"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.28"
hdk = "0.3.0-beta-dev.32"
holochain = "0.3.0-beta-dev.38"
serde = "1"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
trim-paths = true
remap-debuginfo = true
