cargo-features = ["trim-paths"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.29"
hdk = "0.3.0-beta-dev.33"
holochain = "0.3.0-beta-dev.39"
serde = "1"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
trim-paths = true
remap-debuginfo = true
strip = "symbols"
