[package]
edition = "2021"
name = "tests"
version = "0.0.1"

[dependencies]

[dev-dependencies]
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.24", features = ["full"] }

hc_zome_profiles_coordinator = { path = "../crates/coordinator" }
hc_zome_profiles_integrity = { path = "../crates/integrity" }
