[workspace]
members = [
  "zomes/profiles",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = {git = "https://github.com/holochain/holochain", rev = "e40dae0a1994ecbb1da695e2b603257f1bc96839", package = "hdk"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "e40dae0a1994ecbb1da695e2b603257f1bc96839", package = "holo_hash"}
