[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles"

[dependencies]
derive_more = "0"
serde = "1"

hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk"}
