[package]
authors = [
  "guillem.cordoba@gmail.com",
  "eric@harris-braun.com",
  "tatsuya.g.sato@yumeville.com",
]
description = "Profiles zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/profiles"
edition = "2021"
homepage = "https://docs.rs/hc_zome_profiles"
license = "MIT"
name = "hc_zome_profiles_coordinator"
repository = "https://github.com/holochain-open-dev/profiles"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_coordinator"

[dependencies]
derive_more = "0"
serde = "1"
hc_zome_profiles_integrity = { path = "../integrity", version = "0.2" }

hdk = { workspace = true }

[dev-dependencies]
fixt = "0.3.0-beta-dev.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }
