[package]
authors = [
  "guillem.cordoba@gmail.com",
  "eric@harris-braun.com",
  "tatsuya.g.sato@yumeville.com",
]
description = "Profiles zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/profiles"
edition = "2021"
homepage = "https://docs.rs/hc_zome_profiles_integrity"
license = "MIT"
name = "hc_zome_profiles_integrity"
repository = "https://github.com/holochain-open-dev/profiles"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = { workspace = true }
