[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_profiles_types"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles_types"

[dependencies]
derive_more = "0"
serde = "1"

hdk = "0.0.119"
holo_hash = {version = "0.0.16", features = ["encoding"]}
