[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_profiles"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_profiles_types = {path = "../types"}
hdk = {version = "0.0.120", features = ["encoding"]}
